service1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service1-app
  template:
    metadata:
      labels:
        app: service1-app
    spec:
      containers:
      - name: service1-app
        image: hugoja0/project_cloud_service_1
        imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: service1
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: service1-app
  ports:
    - port: 80 
      targetPort: 8080
