front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front-app
  template:
    metadata:
      labels:
        app: front-app
    spec:
      containers:
      - name: front-app
        image: hugoja0/project_cloud_front
        imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  type: NodePort
  selector:
    app: front-app
  ports:
    - port: 80
      targetPort: 8080  

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front
spec:
  hosts:
  - "*"
  gateways:
  - microservice-gateway
  http:
  - match:
    - uri:
        prefix: /
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 80
        host: front.default.svc.cluster.local
